Fixed section title size on mobile devices

--- a/static/sass/hamsabala.scss
+++ b/static/sass/hamsabala.scss
@@ -360,7 +360,7 @@ p{
         h1{
             text-transform:uppercase;
             color:$main-color;
-            font-size:15vw;
+            font-size:10vw;
             text-align:center;
         }
 
